--- a/registration.html
+++ b/registration.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head>stylesheet
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registration</title>
-    <link rel="stylesheet" href="./reset.css">
+    <link rel="" href="./reset.css">
     <link rel="stylesheet" href="./main.css">
 </head>
 
