--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
     <header>
         <div class="conteiner">
             <nav>
+
                 <a>
                     <img width="150" height="34" src="./svg/Logo.svg" alt="logo">
                 </a>
-                <ul>
+                <ul class="clearfix">
                     <li>Home</li>
                     <li>Shop</li>
                     <li>Plant Care</li>
                     <li>Blogs</li>
                 </ul>
+
+
                 <button>Login</button>
             </nav>
         </div>
