--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
 <body>
     <header>
+        <div class="clearfix">
+
+        </div>
         <div class="conteiner">
             <nav>
 
                 <a>
                     <img width="150" height="34" src="./svg/Logo.svg" alt="logo">
                 </a>
-                <ul class="clearfix">
+                <ul>
                     <li>Home</li>
                     <li>Shop</li>
                     <li>Plant Care</li>
@@ -44,8 +47,12 @@
                     <button>SHOP NOW</button>
 
                 </div>
+                <div class="clearfix">
+
+                </div>
                 <div class="right-side">
-                    <img width="507" height="450" src="./img/plant.png" alt="plant">
+                    <img width="135" height="135" src="./img/plantmini.png" alt="plantmini">
+                      <img width="507" height="450" src="./img/plant.png" alt="plant">
                 </div>
             </div>
 
