--- a/index.html
+++ b/index.html
@@ -5,56 +5,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="clearfix">
+        <nav>
+            <div class="flex">
+                <div class="flex-item"> <a href="./shop.html"><img width="150" height="34" src="./svg/Logo.svg"
+                            alt="logo">
+                    </a>
+                </div>
+                <div class="flex-item">
+                    <ul>
+                        <li><a href="./index.html"><button>Home</button></a></li>
+                        <li><a href="./shop.html"><button>Shop</button></a></li>
+                        <li><a href=""><button>Plant Care</button></a></li>
+                        <li><a href="./blog.html"><button>Blogs</button></a></li>
+                    </ul>
+                </div>
+                <div class="flex-item"> <a href="./registration.html"><img src="./img/button1.jpg" alt="button1" width="100" height="35"></a></div>
+            </div>
+        </nav>
 
-        </div>
-        <div class="conteiner">
-            <nav>
-
-                <a>
-                    <img width="150" height="34" src="./svg/Logo.svg" alt="logo">
-                </a>
-                <ul>
-                    <li>Home</li>
-                    <li>Shop</li>
-                    <li>Plant Care</li>
-                    <li>Blogs</li>
-                </ul>
-
-
-                <button>Login</button>
-            </nav>
-        </div>
     </header>
-    <main class="conteiner">
+    <main>
         <section>
             <div class="conteiner">
-                <div class="left-side">
+                <div class="conteiner-item">
                     <p>
                         Welcome to GreenShop
                     </p>
-                    <h2><strong>Let’s Make A <br>
-                            Better <span>Planet</span></strong></h2>
+                    <h1><strong>LET'S MAKE A <br>
+                            BETTER <span>PLANET</span></strong></h1>
                     <p style="color: rgb(52, 50, 50);font-size: 13px;">We are an online plant shop offering a wide range
                         of cheap and trendy plants. Use <br> our plants to
                         create an unique Urban Jungle. Order your favorite plants!</p>
-                    <button>SHOP NOW</button>
+                    <a href="./shop.html"><button class="shop">SHOP NOW</button></a>
 
                 </div>
-                <div class="clearfix">
-
-                </div>
-                <div class="right-side">
-                    <img width="135" height="135" src="./img/plantmini.png" alt="plantmini">
-                      <img width="507" height="450" src="./img/plant.png" alt="plant">
+                <div class="conteiner-item">
+                    <img width="507" height="450" src="./img/plant.png" alt="plant">
                 </div>
             </div>
+
 
         </section>
     </main>
