--- a/registration.html
+++ b/registration.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registration</title>
-    <link rel="" href="./reset.css">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
