--- a/shop.html
+++ b/shop.html
@@ -47,7 +47,7 @@
             <main>
                 <div class="conteiner">
                     <div class="block">
-                        <img src="./img/image1.png" alt="daisy">
+                        <img class="foto" src="./img/image1.png" alt="daisy">
                         <div>
                             Barberton Daise
                         </div>
@@ -56,7 +56,23 @@
                         </div>
                     </div>
                     <div class="block">
-                        <img src="./img/product-21-320x320_1.png" alt="begonia">
+                        <div class="flex-card">
+                            <div class="img-wrap">
+                                <img class="foto" src="./img/product-21-320x320_1.png" alt="begonia">
+                                <div class="card-buttons">
+                                    <button>
+                                        <img src="./img/shop.svg" alt="shop" width="20" height="20">
+                                    </button>
+                                    <button>
+                                        <img src="./img/heart.svg" alt="heart" width="20" height="20">
+                                    </button>
+                                    <button>
+                                        <img src="./img/frame.svg" alt="frame" width="20" height="20">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
                         <div>
                             Angel Wing Begonia
                         </div>
@@ -65,19 +81,25 @@
                         </div>
                     </div>
                     <div class="block">
-                        <img src="./img/image2.png" alt="violet">
+                        <div class="img-block">
+                            <div class="badge">
+                                13% OFF
+                            </div>
+                            <img class="foto" src="./img/image2.png" alt="violet">
+                        </div>
+
                         <div>
                             African Violet
                         </div>
                         <div class="green">
-                            $199.00
+                            $199.00 <span>$229.00</span>
                         </div>
                     </div>
 
                 </div>
                 <div class="conteiner">
                     <div class="block">
-                        <img src="./img/013.png" alt="lily">
+                        <img class="foto" src="./img/013.png" alt="lily">
                         <div>
                             Beach Spider Lily
                         </div>
@@ -86,7 +108,7 @@
                         </div>
                     </div>
                     <div class="block">
-                        <img src="./img/image7.png" alt="blushing">
+                        <img class="foto" src="./img/image7.png" alt="blushing">
                         <div>
                             Blushing Bromeliad
                         </div>
@@ -95,7 +117,7 @@
                         </div>
                     </div>
                     <div class="block">
-                        <img src="./img/image8.png" alt="plant">
+                        <img class="foto" src="./img/image8.png" alt="plant">
                         <div>
                             Aluminum Plant
                         </div>
@@ -107,7 +129,7 @@
                 </div>
                 <div class="conteiner">
                     <div class="block">
-                        <img src="./img/image9.png" alt="fem">
+                        <img class="foto" src="./img/image9.png" alt="fem">
                         <div>
                             Bird's Nest Fern
                         </div>
@@ -116,7 +138,7 @@
                         </div>
                     </div>
                     <div class="block">
-                        <img src="./img/product-20-320x320_1.png" alt=" palm">
+                        <img class="foto" src="./img/product-20-320x320_1.png" alt=" palm">
                         <div>
                             Broadleaf Lady Palm
                         </div>
@@ -125,7 +147,7 @@
                         </div>
                     </div>
                     <div class="block">
-                        <img src="./img/image10.png" alt="chinese">
+                        <img class="foto" src="./img/image10.png" alt="chinese">
                         <div>
                             Chinese Evergreen
                         </div>
