--- a/index.html
+++ b/index.html
@@ -18,14 +18,31 @@
                     </a>
                 </div>
                 <div class="flex-item">
-                    <ul>
-                        <li><a href="./index.html"><button>Home</button></a></li>
-                        <li><a href="./shop.html"><button>Shop</button></a></li>
-                        <li><a href=""><button>Plant Care</button></a></li>
-                        <li><a href="./blog.html"><button>Blogs</button></a></li>
+                    <ul class="list1">
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./shop.html">Shop</a></li>
+                        <li><a href="#">Plant Care</a>
+                            <ul class="list2">
+                                <li><a href="#">Drainage</a></li>
+                                <li><a href="#">Fungicides</a></li>
+                                <li><a href="#">Fertilizer</a></li>
+                                <li><a href="#">Priming</a>
+                                    <ul class="list3">
+                                        <li><a href="#">Universal</a></li>
+                                        <li><a href="#">For Ficus</a></li>
+                                        <li><a href="#">For Cacti</a></li>
+                                        <li><a href="#">For Citrus</a></li>
+                                        <li><a href="#">For those in bloom</a></li>
+                                        <li><a href="#">For Orchids</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li><a href="./blog.html">Blogs</a></li>
                     </ul>
                 </div>
-                <div class="flex-item"> <a href="./registration.html"><img src="./img/button1.jpg" alt="button1" width="100" height="35"></a></div>
+                <div class="flex-item"> <a href="./registration.html"><img src="./img/button1.jpg" alt="button1"
+                            width="100" height="35"></a></div>
             </div>
         </nav>
 
