--- a/registration.html
+++ b/registration.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>stylesheet
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registration</title>
-    <link rel="" href="./css/reset.css">
+    <link rel="stylesheet" href="./preloader.css">
+    <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-
-
+    <div class="preloader"></div>
     <h1> Login <span> Register</span></h1>
 
     <div>
@@ -22,11 +22,12 @@
         <input type="text" name="email" required placeholder="Enter your email adress">
         <input type="password" name="password" required placeholder="Password">
         <input type="password" name="Contirm password" required placeholder="Contirm Password">
+        <label class="custom-checkbox"> I authorize data processing
+            <input type="checkbox" name="check" class="checkbox" >
+            <div class="custom-check-icon"></div>
+        </label>
         <button type="submit" name="register" id="input">Register</button>
     </form>
-
-
-
     <footer>
         <div>
             Or register with
