--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <use href="./sprite.svg#logo" />
                         </svg>
                     </a>
-                </div>
+                </div> 
                 <div>
                     <ul class="list1">
                         <li><a href="./index.html">Home</a></li>
@@ -49,6 +49,30 @@
                     <a href="./registration.html"><img src="./img/button1.jpg" alt="button1" width="100"
                             height="35"></a>
                 </div>
+                <div class="menu">
+                    <input type="checkbox" id="burger-checkbox" class="burger-checkbox">
+                    <label for="burger-checkbox" class="burger"></label>
+                    <ul class="menu-list">
+                        <li><a href="./index.html">Home</a>
+                        <li>
+                        <li><a href="#link1">Shop</a>
+                        <li>
+                        <li><a href="#link2">Plant Care</a>
+                        <li>
+                        <li><a href="#link3">Blogs</a>
+                        <li>
+                        <li>
+                            <a href="#"><img src="./img/vector2.svg" alt="vector2" width="20" height="20"></a>
+                            <a href="#"><img src="./img/vector4.svg" alt="vector3" width="29" height="24"></a>
+                        </li>
+                        <li>
+                            <a href="./registration.html"><img src="./img/button1.jpg" alt="button1" width="100"
+                                    height="35"></a>
+                        </li>
+                    </ul>
+                    
+                </div>
+            <div>
             </div>
         </nav>
 
